# syncthing-rs

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
async/: Cargo.toml
async/src/: client.rs  event_stream.rs  lib.rs  tests.rs
blocking/: Cargo.toml
blocking/src/: client.rs  event_stream.rs  lib.rs  tests.rs
examples/event_printer/: Cargo.toml
examples/event_printer/src/: main.rs
examples/multi_client/: Cargo.toml
examples/multi_client/src/: main.rs
examples/multi_client_async/: Cargo.toml
examples/system_info/: Cargo.toml
examples/system_info/src/: main.rs
src/: client.rs  event_stream.rs
src/rest/: events.rs
types/: Cargo.toml
types/src/: events.rs  lib.rs  routes.rs  utils.rs
types/src/cluster/: devices.rs
types/src/config/: devices.rs  folders.rs  mod.rs
types/src/db/: status.rs
types/src/system/: connections.rs  discovery.rs  error.rs  log.rs  loglevels.rs  mod.rs  ping.rs  status.rs  upgrade.rs  version.rs
