[package]
name = "syncthing-async"
version = "0.0.0"
authors = ["Jayce Fayne <jayce.fayne@mailbox.org>"]
edition = "2024"
description = "A Rust library for controlling syncthing file synchronization through its REST interface"
license = "MIT"
repository = "https://github.com/jaycefayne/syncthing-rs"
categories = ["asynchronous", "concurrency", "network-programming"]
keywords = ["syncthing", "rest", "http", "async"]
readme = "../README.md"

[dependencies]
syncthing-types = { version = "0.2.0", path = "../types" }
serde = "1"
serde_json = "1"
futures-core = "0.3"
http = "1"
anyhow = "1"
tokio = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "http2",
    "json",
] }


[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
