[package]
name = "syncthing-types"
version = "0.2.0"
authors = ["Jayce Fayne <jayce.fayne@mailbox.org>"]
edition = "2024"
description = "A Rust library containing Type defintions from syncthing's REST interface"
license = "MIT"
repository = "https://github.com/jaycefayne/syncthing-rs"
categories = ["network-programming"]
keywords = ["syncthing", "rest", "http"]
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

[features]
default = ["utils"]
utils = []
